SpinNewInstance test
+ Test class for SpinNewInstance test