@@ -10,23 +10,22 @@
   
   <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.verbose>true</maven.compiler.verbose>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <!-- base library versions that can be overridden in submodules -->
+        <maven.test.skip>true</maven.test.skip>
+        <red5.version>1.0.9-M2</red5.version>
         <junit.version>4.12</junit.version>
-        <spring.version>4.3.2.RELEASE</spring.version>
-        <servlet.version>3.1.0</servlet.version>
         <slf4j.version>1.7.21</slf4j.version>
-        <logback.version>1.1.7</logback.version>
-        <httpcomponents.version>4.5</httpcomponents.version>
-        <google.gson.version>2.2.4</google.gson.version>
-        <commons.io.version>2.4</commons.io.version>
-		<streammanager.commons.version>1.2.12</streammanager.commons.version>
-  </properties>
-  
+        <logback.version>1.1.6</logback.version>
+        <commons.io.version>1.3.2</commons.io.version>
+        <commons.chain.version>1.2</commons.chain.version>
+        <streammanager.commons.version>1.2.11</streammanager.commons.version>
+    </properties>
+
   <dependencyManagement>
         <dependencies>
-            <dependency>
+        	<dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
                 <version>${slf4j.version}</version>
@@ -34,11 +33,20 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-  
-  
+    
   <dependencies>
-  
-  	<!--  logging stuff -->
+  	<!--  streammanager-commons -->
+     <dependency>
+         <groupId>com.red5pro</groupId>
+         <artifactId>streammanager-commons</artifactId>
+         <version>${streammanager.commons.version}</version>
+     </dependency>
+  	<!--  Azure stuff -->
+    <dependency>
+       <groupId>com.microsoft.azure</groupId>
+       <artifactId>azure</artifactId>
+       <version>1.16.0</version>
+  	</dependency>
 	<dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
@@ -74,77 +82,179 @@
             <version>${logback.version}</version>
             <scope>provided</scope>
         </dependency>
-        
-        
-        <!--  misc -->
         <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>${google.gson.version}</version>
-        </dependency>
-        
-	    <!--  streammanager-commons -->
-	    
+            <groupId>org.red5</groupId>
+            <artifactId>red5-io</artifactId>
+            <version>${red5.version}</version>
+            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.mina</groupId>
+                    <artifactId>mina-core</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.mina</groupId>
+                    <artifactId>mina-integration-beans</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.mina</groupId>
+                    <artifactId>mina-integration-jmx</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>  
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>      
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
 		<dependency>
-		   <groupId>com.red5pro</groupId>
-	        <artifactId>streammanager-commons</artifactId>
-	        <version>${streammanager.commons.version}</version>
-		    <scope>system</scope>
-           <systemPath>${basedir}/lib/streammanager-commons-1.2.12.jar</systemPath>
-		</dependency> 
-		
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		    <version>2.3.1</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/commons-chain/commons-chain -->
+		<dependency>
+		    <groupId>commons-chain</groupId>
+		    <artifactId>commons-chain</artifactId>
+		    <version>${commons.chain.version}</version>
+		</dependency>   
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-io -->
 		<dependency>
 		    <groupId>org.apache.commons</groupId>
 		    <artifactId>commons-io</artifactId>
 		    <version>${commons.io.version}</version>
-		</dependency>   
-          
-  </dependencies> 
-   
+		</dependency>
+  </dependencies>
   <build>
-        <plugins>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-compiler-plugin</artifactId>
-			<inherited>true</inherited>
-			<version>3.1</version>
-            <configuration>
-                    <source>${maven.compiler.source}</source>
-                    <target>${maven.compiler.target}</target>
-            </configuration>
-         </plugin>
-        <plugin>
-			<groupId>org.apache.felix</groupId>
-            <artifactId>maven-bundle-plugin</artifactId>
-            <version>2.3.7</version>
-            <extensions>true</extensions>
-        </plugin>
-        <plugin>
-			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-jar-plugin</artifactId>
-			<version>2.6</version>
-		</plugin>
-        <plugin>
-              <artifactId>maven-assembly-plugin</artifactId>
-              <version>2.6</version>
-              <configuration>
-                  <descriptors>
-                    <descriptor>/src/assembly/jar-with-deps-with-exclude.xml</descriptor> 
-                  </descriptors>
-                  <failOnMissingWebXml>false</failOnMissingWebXml>
-              <finalName>sample-cloud-controller</finalName>
-              <version>${version}</version>
-              <appendAssemblyId>false</appendAssemblyId>
-              </configuration>
-              <executions>
-                <execution>
-                  <phase>package</phase>
-                  <goals>
-                    <goal>single</goal>
-                  </goals>
-                </execution>
-              </executions>
-      </plugin>
-        </plugins>
+        <!-- symbolic link -->
+        <defaultGoal>package</defaultGoal>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>2.3.2</version>
+                    <configuration>
+                        <encoding>${project.build.sourceEncoding}</encoding>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-resources-plugin</artifactId>
+                    <version>2.4.3</version>
+                    <configuration>
+                        <encoding>${project.build.sourceEncoding}</encoding>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>buildnumber-maven-plugin</artifactId>
+                    <version>1.4</version>
+                    <executions>
+                        <execution>
+                            <phase>validate</phase>
+                            <goals>
+                                <goal>create</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <doCheck>false</doCheck>
+                        <doUpdate>false</doUpdate>
+                        <!-- Use 7 available chars from git commit -->
+                        <shortRevisionLength>7</shortRevisionLength>
+                        <scmBranchPropertyName>buildScmBranch</scmBranchPropertyName>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <version>2.6</version>
+                    <configuration>
+                        <archive>
+                            <manifestEntries>
+                                <Build-OS>${os.name} ${os.version}</Build-OS>
+                                <Build-Java>Java ${java.version}</Build-Java>
+                                <!-- Build number comes from git commit and is updated via profile -->
+                                <Build-Number>${buildNumber}</Build-Number>
+                                <Build-Branch>${buildScmBranch}</Build-Branch>
+                            </manifestEntries>
+                        </archive>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.19.1</version>
+                    <configuration>
+                        <!-- https://maven.apache.org/surefire/maven-surefire-plugin/examples/skipping-test.html -->
+                        <skipTests>${maven.test.skip}</skipTests>
+                        <!-- 
+                        <forkCount>1</forkCount>
+                        <reuseForks>false</reuseForks>
+                        <argLine>-Xms512m -Xmx1024m -server -XX:+UseParallelGC -Xverify:none</argLine>
+                        <shutdown>kill</shutdown>
+                        -->
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.felix</groupId>
+                    <artifactId>maven-bundle-plugin</artifactId>
+                    <extensions>true</extensions>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-deploy-plugin</artifactId>
+                    <version>2.8.2</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-dependency-plugin</artifactId>
+                    <version>2.10</version>
+                </plugin>                    
+                <plugin>
+                    <artifactId>maven-assembly-plugin</artifactId>
+                    <version>3.0.0</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-gpg-plugin</artifactId>
+                    <executions>
+                        <execution>
+                            <id>sign-artifacts</id>
+                            <phase>verify</phase>
+                            <goals>
+                                <goal>sign</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
+                    <groupId>com.github.maven-nar</groupId>
+                    <artifactId>nar-maven-plugin</artifactId>
+                    <version>3.5.0</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>exec-maven-plugin</artifactId>
+                </plugin>
+                <plugin>
+                    <groupId>com.github.wvengen</groupId>
+                    <artifactId>proguard-maven-plugin</artifactId>
+                    <version>2.0.12</version>
+                    <executions>
+                        <execution>
+                            <phase>package</phase>
+                            <goals><goal>proguard</goal></goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <maxMemory>1024m</maxMemory>
+                        <!-- File with proguard configuration -->
+                        <proguardInclude>${basedir}/src/main/proguard/proguard.conf</proguardInclude>
+                        <libs>
+                            <lib>${java.home}/lib/rt.jar</lib>
+                            <lib>${java.home}/lib/jce.jar</lib>
+                            <lib>${java.home}/lib/ext/sunjce_provider.jar</lib>
+                        </libs>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
     </build>
 </project>
